syntax = "proto3";
package union.ibc.lightclients.scroll.v1;

option go_package = "union/ibc/lightclients/scroll";
import "ibc/core/client/v1/client.proto";
import "union/ibc/lightclients/ethereum/v1/ethereum.proto";

message ClientState {
  string l1_client_id = 1;
  string chain_id = 2;
  uint64 latest_batch_index = 3;
  .ibc.core.client.v1.Height frozen_height = 4;
  bytes rollup_contract_address = 5;
  bytes rollup_finalized_state_roots_slot = 6;
  bytes ibc_contract_address = 7;
  bytes ibc_commitment_slot = 8;
}

message ConsensusState {
  uint64 batch_index = 1;
  bytes ibc_storage_root = 2;
  uint64 timestamp = 3;
}

message Header {
  .ibc.core.client.v1.Height l1_height = 1,
  .union.ibc.lightclients.ethereum.v1.AccountProof l1_account_proof = 2,
  bytes l2_state_root = 3,
  .union.ibc.lightclients.ethereum.v1.AccountProof finalized_proof = 4,
  uint64 last_batch_index = 5,
  .union.ibc.lightclients.ethereum.v1.StorageProof last_batch_index_proof = 6,
  .union.ibc.lightclients.ethereum.v1.AccountProof l2_ibc_account_proof = 7,
}

